--- a/management/templates/qr_code_attendance.html
+++ b/management/templates/qr_code_attendance.html
@@ -4,7 +4,7 @@
     {% load static %}
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'qr-code-attendance.css' %}">
 </head>
 <body class="qr-code-scanner-attendance-body">
     <div class="qr-code-scanner-attendance-heading-div">
