--- a/management/templates/reports.html
+++ b/management/templates/reports.html
@@ -54,6 +54,16 @@
                 Leaders
             </div>
         </a>
+        <a class="reports-report-block-div" href="{% url 'attendance-list' %}">
+            <div class="reports-block-report-title-div">
+                QR Code Attendance
+            </div>
+        </a>
+        <a class="reports-report-block-div" href="{% url 'sitio-report' %}">
+            <div class="reports-block-report-title-div">
+                Member per Sitio
+            </div>
+        </a>
     </div>
 </section>
 {% endblock %}
