--- a/management/static/styles.css
+++ b/management/static/styles.css
@@ -35,6 +35,13 @@ body{
     z-index:20;
 }
 
+.home-page-authenticated-user{
+    font-family: 'Montserrat';
+    text-align: center;
+    background-color: rgb(40, 100, 100);
+    padding: 15px;
+}
+
 .home-header-nav-links{
     list-style: none;
     margin-right: 50px;
@@ -251,7 +258,7 @@ body{
     border: 1px solid rgb(40, 100, 100);
     overflow-y: scroll;
     margin-left: 150px;
-    margin-top: -20px;
+    margin-top: -100px;
     visibility: hidden;
 }
 
