--- a/management/static/non-admin-leader-profile-responsive.css
+++ b/management/static/non-admin-leader-profile-responsive.css
@@ -11,11 +11,51 @@
     }
 }
 
+@media only screen and (max-width: 1198px){
+    .leader-profile-unassociated-members-lens-icon{
+        margin-left: 40px;
+    }
+}
+
 @media only screen and (max-width: 1166px){
     .leader-profile-qr-code-container-div{
         margin-left: 100px;
         width: 60%;
     }
+}
+
+@media only screen and (max-width: 1107px){
+    .leader-profile-unassociated-members-lens-icon{
+        margin-left: 30px;
+    }
+}
+
+@media only screen and (max-width: 766px){
+    .leader-profile-unassociated-members-lens-icon{
+        margin-left: 20px;
+    }
+}
+
+@media only screen and (max-width: 352px){
+    .leader-profile-unassociated-members-lens-icon{
+        margin-left: 10px;
+    }
+}
+
+@media only screen and (max-width: 317px){
+    .leader-profile-unassociated-members-lens-icon{
+        margin-left: 20px;
+    }
+
+    #leader-profile-search-unassociated-members-input{
+        border-radius: 20px;
+        border: 1px solid rgb(100, 100, 100);
+        padding-left: 30px;
+        height: 30px;
+        width:80%;
+        margin-left: -35px;
+    }
+
 }
 
 @media only screen and (max-width: 1072px){
