--- a/management/templates/member_per_brgy_report.html
+++ b/management/templates/member_per_brgy_report.html
@@ -68,6 +68,7 @@
                     Download PDF
                 </a>
             </div>
+            {{ listasha }}
             {% for brgy, members in member_per_brgy_list.items %}
                 <table class="member-per-brgy-table">
                     <tr class="member-per-brgy-table-row">
