--- a/management/templates/leader_profile_non_admin.html
+++ b/management/templates/leader_profile_non_admin.html
@@ -246,7 +246,7 @@
                         <div class="leader-profile-unassociated-members-container">
                             <div class="leader-profile-unassociated-member-search-form-container">
                                 <form class="leader-profile-search-unassociated-member-form"
-                                      method="GET" action="{% url 'cluster' leader.name leader.user %}">
+                                      method="GET" action="{% url 'profile-leader' leader.user %}">
                                     <span class="leader-profile-unassociated-members-lens-icon">
                                         <i class="fa fa-search"></i>
                                     </span>
@@ -283,22 +283,25 @@
                                                 </div>
                                             </div>
                                             <!-- Added 3/5/2024 1:56 AM-->
-                                            {% if not member.user in leaders_request_list %}
-                                            <div class="leader-profile-add-member-btn-container-div">
-                                                <a class="leader-profile-associate-member-btn"
-                                                   href="{% url 'request-connect' member.user leader.user %}">
-                                                    Add as Member
-                                                </a>
-                                            </div>
-                                            {% else %}
-                                            <div class="leader-profile-add-member-btn-container-div">
-                                                Request Sent
-                                                <div>
-                                                    <a href="{% url 'revert-request-connect' member.user leader.user %}">
-                                                        Revert Request
+                                            {% if not member.user.username in leader_member_connect_request_list %}
+                                                <div class="leader-profile-add-member-btn-container-div">
+                                                    <a class="leader-profile-associate-member-btn"
+                                                       href="{% url 'request-connect' member.user leader.user %}">
+                                                        Add as Member
                                                     </a>
                                                 </div>
-                                            </div>
+                                            {% else %}
+                                                <div class="leader-profile-leader-connect-request-div">
+                                                    <div class="leader-profile-request-sent-notifier">
+                                                        Request Sent
+                                                    </div>
+                                                    <div class="leader-profile-revert-request-div">
+                                                        <a class="leader-profile-revert-request-member-btn"
+                                                           href="{% url 'revert-request-connect' member.user leader.user %}">
+                                                            Revert Request
+                                                        </a>
+                                                    </div>
+                                                </div>
                                             {% endif %}
                                         </div>
                                     {% endfor %}
@@ -336,7 +339,7 @@
                                             </div>
                                         </div>
                                         <!-- Added 3/5/2024 1:40 AM-->
-                                        {% if not member.user in leaders_request_list %}
+                                        {% if not member.user.username in leader_member_connect_request_list %}
                                         <div class="leader-profile-add-member-btn-container-div">
                                             <a class="leader-profile-associate-member-btn"
                                                href="{% url 'request-connect' member.user leader.user %}">
@@ -344,11 +347,14 @@
                                             </a>
                                         </div>
                                         {% else %}
-                                        <div class="leader-profile-add-member-btn-container-div">
-                                            Request Sent
-                                            <div>
-                                                <a href="{% url 'revert-request-connect' member.user leader.user %}">
-                                                    Revert Request
+                                        <div class="leader-profile-leader-connect-request-div">
+                                            <div class="leader-profile-request-sent-notifier">
+                                                Request Sent
+                                            </div>
+                                            <div class="leader-profile-revert-connect-div">
+                                                <a class="leader-profile-revert-request-function"
+                                                   href="{% url 'revert-request-connect' member.user leader.user %}">
+                                                    Revert
                                                 </a>
                                             </div>
                                         </div>
