--- a/management/templates/leader_profile_non_admin.html
+++ b/management/templates/leader_profile_non_admin.html
@@ -13,6 +13,7 @@
     <script src="{% static 'jquery-3.6.4.min.js' %}"></script>
     <script src="{% static 'chart.js' %}"></script>
     <script src="{% static 'swiper-bundle.min.js' %}"></script>
+    <script src="{% static 'htmx.js' %}"></script>
 </head>
 <body>
     <section class="leader-profile-utmost-container-section">
@@ -216,10 +217,19 @@
 
                                 <div class="leader-profile-remove-member-container-div">
                                     {% if request.user == leader.user %}
-                                        <a class="leader-profile-remove-member-btn"
-                                           href="{% url 'unassociated-member' leader.user member.user %}">
-                                            Remove Member
-                                        </a>
+                                        <form action="{% url 'unassociated-member' leader.user member.user %}">
+                                            {% csrf_token %}
+                                            <button hx-post="{% url 'unassociated-member' leader.user member.user %}"
+                                                    hx-target=".leader-profile-utmost-container-section"
+                                                    hx-swap="innerHTML"
+                                                    class="leader-profile-remove-member-btn">
+                                                Remove Member
+                                            </button>
+                                        </form>
+<!--                                        <a class="leader-profile-remove-member-btn"-->
+<!--                                           href="{% url 'unassociated-member' leader.user member.user %}">-->
+<!--                                            Remove Member-->
+<!--                                        </a>-->
                                     {% endif %}
                                 </div>
                             </div>
@@ -285,10 +295,19 @@
                                             <!-- Added 3/5/2024 1:56 AM-->
                                             {% if not member.user.username in leader_member_connect_request_list %}
                                                 <div class="leader-profile-add-member-btn-container-div">
-                                                    <a class="leader-profile-associate-member-btn"
-                                                       href="{% url 'request-connect' member.user leader.user %}">
-                                                        Add as Member
-                                                    </a>
+                                                    <form action="{% url 'request-connect' member.user leader.user %}">
+                                                        {% csrf_token %}
+                                                        <button hx-post="{% url 'request-connect' member.user leader.user %}"
+                                                                hx-target=".leader-profile-utmost-container-section"
+                                                                hx-swap="innerHTML"
+                                                                class="leader-profile-connect-request-btn">
+                                                            Add as Member
+                                                        </button>
+                                                    </form>
+<!--                                                    <a class="leader-profile-associate-member-btn"-->
+<!--                                                       href="{% url 'request-connect' member.user leader.user %}">-->
+<!--                                                        Add as Member-->
+<!--                                                    </a>-->
                                                 </div>
                                             {% else %}
                                                 <div class="leader-profile-leader-connect-request-div">
@@ -296,10 +315,19 @@
                                                         Request Sent
                                                     </div>
                                                     <div class="leader-profile-revert-request-div">
-                                                        <a class="leader-profile-revert-request-member-btn"
-                                                           href="{% url 'revert-request-connect' member.user leader.user %}">
-                                                            Revert Request
-                                                        </a>
+                                                        <form action="{% url 'revert-request-connect' member.user leader.user %}">
+                                                            {% csrf_token %}
+                                                            <button hx-post="{% url 'revert-request-connect' member.user leader.user %}"
+                                                                    hx-target=".leader-profile-utmost-container-section"
+                                                                    hx-swap="innerHTML"
+                                                                    class="leader-profile-revert-request-btn">
+                                                                Cancel
+                                                            </button>
+                                                        </form>
+<!--                                                        <a class="leader-profile-revert-request-member-btn"-->
+<!--                                                           href="{% url 'revert-request-connect' member.user leader.user %}">-->
+<!--                                                            Revert Request-->
+<!--                                                        </a>-->
                                                     </div>
                                                 </div>
                                             {% endif %}
@@ -311,9 +339,8 @@
                                     </div>
                                 {% endif %}
                             {% else %}
-
                                 {% for member in unassociated_members %}
-                                    <div class="leader-profile-unassociated-member-div">
+                                    <section class="leader-profile-unassociated-member-div">
                                         <div class="leader-profile-unassociated-members-profile-image-container-div">
                                             {% if member.image %}
                                                 <div >
@@ -339,27 +366,53 @@
                                             </div>
                                         </div>
                                         <!-- Added 3/5/2024 1:40 AM-->
-                                        {% if not member.user.username in leader_member_connect_request_list %}
-                                        <div class="leader-profile-add-member-btn-container-div">
-                                            <a class="leader-profile-associate-member-btn"
-                                               href="{% url 'request-connect' member.user leader.user %}">
-                                                Add as Member
-                                            </a>
-                                        </div>
-                                        {% else %}
-                                        <div class="leader-profile-leader-connect-request-div">
-                                            <div class="leader-profile-request-sent-notifier">
-                                                Request Sent
+                                        <section class="harkon" id="harkon-{{ member.user}}-{{ leader.user }}">
+                                            {% if not member.user.username in leader_member_connect_request_list %}
+                                            <div class="leader-profile-add-member-btn-container-div">
+                                                <form action="{% url 'request-connect' member.user leader.user %}">
+                                                    {% csrf_token %}
+                                                    <button hx-post="{% url 'request-connect' member.user leader.user %}"
+                                                            hx-target="#harkon-{{ member.user}}-{{ leader.user }}"
+                                                            hx-swap="innerHTML"
+                                                            hx-indicator="#loading-spinning{{ member.user}}-{{ leader.user }}"
+                                                            class="leader-profile-connect-request-btn"
+                                                            id="leader-connect-btn{{ member.user}}-{{ leader.user }}">
+                                                        Add as Member
+                                                    </button>
+                                                    <span id="loading-spinning{{ member.user}}-{{ leader.user }}"
+                                                          class="loading-spinner">
+
+                                                    </span>
+                                                </form>
+                                                <!--                                            <a class="leader-profile-associate-member-btn"-->
+                                                <!--                                               href="{% url 'request-connect' member.user leader.user %}">-->
+                                                <!--                                                Add as Member-->
+                                                <!--                                            </a>-->
                                             </div>
-                                            <div class="leader-profile-revert-connect-div">
-                                                <a class="leader-profile-revert-request-function"
-                                                   href="{% url 'revert-request-connect' member.user leader.user %}">
-                                                    Revert
-                                                </a>
+                                            {% else %}
+                                            <div class="leader-profile-leader-connect-request-div">
+                                                <div class="leader-profile-request-sent-notifier">
+                                                    Request Sent
+                                                </div>
+                                                <div class="leader-profile-revert-connect-div">
+                                                    <form action="{% url 'revert-request-connect' member.user leader.user %}">
+                                                        {% csrf_token %}
+                                                        <button hx-post="{% url 'revert-request-connect' member.user leader.user %}"
+                                                                hx-target="#harkon-{{ member.user}}-{{ leader.user }}"
+                                                                hx-swap="innerHTML"
+                                                                class="leader-profile-revert-request-btn">
+                                                            Cancel
+                                                        </button>
+                                                    </form>
+    <!--                                                <a class="leader-profile-revert-request-function"-->
+    <!--                                                   href="{% url 'revert-request-connect' member.user leader.user %}">-->
+    <!--                                                    Revert-->
+    <!--                                                </a>-->
+                                                </div>
                                             </div>
-                                        </div>
-                                        {% endif %}
-                                    </div>
+                                            {% endif %}
+                                        </section>
+                                    </section>
                                 {% empty %}
                                     <div class="leader-profile-no-unassociated-members-notifier">
                                         Members in this Barangay are associated.
@@ -452,6 +505,13 @@
         </div>
     </section>
     <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            ToggleEditForm()
+          // HTMX event listener to reapply the toggle functionality after successful response
+          document.addEventListener('htmx:afterSwap', function(event) {
+            ToggleEditForm()
+          });
+        });
         document.getElementById('leader-edit-brgys').addEventListener('change', function() {
             // Get the selected value
             var selectedValue = this.value;
@@ -474,18 +534,20 @@
             });
         });
 
-        const toggleEditLeaderForm = document.querySelector('.leader-profile-edit-detail-toggle-btn');
-        const untoggleEditLeaderForm = document.querySelector('.leader-profile-hide-edit-form-btn');
+        function ToggleEditForm() {
+            const toggleEditLeaderForm = document.querySelector('.leader-profile-edit-detail-toggle-btn');
+            const untoggleEditLeaderForm = document.querySelector('.leader-profile-hide-edit-form-btn');
 
-        const editLeaderProfileForm = document.querySelector('.leader-profile-edit-profile-form-container');
+            const editLeaderProfileForm = document.querySelector('.leader-profile-edit-profile-form-container');
 
-        toggleEditLeaderForm.addEventListener('click', ()=> {
-            editLeaderProfileForm.classList.add('show-leader-edit-form');
-        });
+            toggleEditLeaderForm.addEventListener('click', ()=> {
+                editLeaderProfileForm.classList.add('show-leader-edit-form');
+            });
 
-        untoggleEditLeaderForm.addEventListener('click', ()=> {
-            editLeaderProfileForm.classList.remove('show-leader-edit-form');
-        });
+            untoggleEditLeaderForm.addEventListener('click', ()=> {
+                editLeaderProfileForm.classList.remove('show-leader-edit-form');
+            });
+        };
     </script>
 </body>
 </html>
